Enhance project layout and styling
- Updated Twitch.css to improve embed responsiveness.
- Refactored project.html for better structure and added countdown functionality.
- Enhanced sb-extension's.html with new extension cards and improved layout.
- Modified countdown.js to change countdown date and update display element.
- Adjusted streaming.html to correct class names for player section.
- Cleaned up style.css by removing unused styles and added new Countdown.css for coming soon page.
- Introduced Extension's.css for styling streamer.bot extensions with responsive design and hover effects.

--- a/css/Twitch.css
+++ b/css/Twitch.css
@@ -40,3 +40,8 @@
 #stream-tools a:hover {
   background: #772ce8;
 }
+#twitch-embed {
+        width: 100%;
+        max-width: 850px;
+        height: 400px;
+    }
