--- a/css/Nav.css
+++ b/css/Nav.css
@@ -8,35 +8,49 @@
         align-items: center;
         gap: 1rem;
         flex-wrap: wrap;
-        }
     }
-    .topnav #myLinks {
-        display: none;
-        width: 100%;
-    }
-    .topnav a {
-        color: var(--padresgold);
-        font-family: var(--heading);
-        padding: 14px 16px;
-        text-decoration: none;
-        font-size: 25px;
-        display: inline-flex;
-        align-items: center;
-        gap: 0.5rem;
+}
 
-    }
-    .topnav a.topnav-icon {
-        background: black;
-        display: block;
-        position: absolute;
-        right: 0;
-        top: 0;
-        z-index: 2;
-    }
-    .topnav img {
-        height: 38px;
-        width: auto;
-        display: inline-block;
-        margin: 0 1rem 0 0;
-        vertical-align: middle;
-    }
+.topnav #myLinks {
+    display: none;
+    width: 100%;
+}
+
+.topnav a {
+    color: var(--padresgold);
+    font-family: var(--heading);
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 25px;
+    display: inline-flex;
+    align-items: center;
+    gap: 0.5rem;
+
+}
+
+.topnav a.topnav-icon {
+    background: black;
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: 2;
+}
+
+.topnav img {
+    height: 38px;
+    width: auto;
+    display: inline-block;
+    margin: 0 1rem 0 0;
+    vertical-align: middle;
+}
+
+.local-time {
+    color: #ccc;
+    font-size: 0.9rem;
+}
+
+#local-time::before {
+    content: "Local Time: ";
+    font-weight: bold;
+}
